--- a/WpfApp1/IPmanip.csproj
+++ b/WpfApp1/IPmanip.csproj
@@ -5,9 +5,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A6269A54-19B7-4569-83B5-CF8780889C09}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>WpfApp1</RootNamespace>
-    <AssemblyName>WpfApp1</AssemblyName>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>IPmanip</RootNamespace>
+    <AssemblyName>IPmanip</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
