добавил зависимость сообщения от имени зоста

--- a/WpfApp1/IPmanip.csproj
+++ b/WpfApp1/IPmanip.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CurrentIP.cs" />
+    <Compile Include="SelfName.cs" />
     <Compile Include="IP.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
