--- a/Share Data/Share Data.csproj
+++ b/Share Data/Share Data.csproj
@@ -69,7 +69,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="getting_name.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rounded_Button.cs">
@@ -117,6 +116,10 @@
     <ProjectReference Include="..\InterfaceV2\Interface.csproj">
       <Project>{8f95ec8f-1b4a-4a26-84c1-3b7defe2ed84}</Project>
       <Name>Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WpfApp1\IPmanip.csproj">
+      <Project>{a6269a54-19b7-4569-83b5-cf8780889c09}</Project>
+      <Name>IPmanip</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
