--- a/Share Data/Share Data.csproj
+++ b/Share Data/Share Data.csproj
@@ -129,7 +129,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\релиз пк.png" />
+    <None Include="Resources\pc.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
