--- a/wpf pc/wpf pc.csproj
+++ b/wpf pc/wpf pc.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89392640-B296-4674-AD00-D074B99E57F7}</ProjectGuid>
+    <ProjectGuid>{B02C7540-52DF-4857-A347-F1ADD536C6E3}</ProjectGuid>
     <OutputType>library</OutputType>
-    <RootNamespace>WpfControlLibrary1</RootNamespace>
-    <AssemblyName>WpfControlLibrary1</AssemblyName>
+    <RootNamespace>wpf_pc</RootNamespace>
+    <AssemblyName>wpf pc</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
