--- a/InterfaceV2/Interface.csproj
+++ b/InterfaceV2/Interface.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="RequestInteractivity.cs" />
+    <Compile Include="TcpSender.cs" />
+    <Compile Include="TcpServer.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
