--- a/InterfaceV2/Interface.csproj
+++ b/InterfaceV2/Interface.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionV2.cs" />
     <Compile Include="Interface.cs" />
+    <Compile Include="Path.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
