--- a/ConnectedForm/ConnectedForm.csproj
+++ b/ConnectedForm/ConnectedForm.csproj
@@ -101,6 +101,10 @@
       <Project>{7525C004-1276-4AE2-8ADF-C81526D2A9AC}</Project>
       <Name>interactDomain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InterfaceV2\Interface.csproj">
+      <Project>{8F95EC8F-1B4A-4A26-84C1-3B7DEFE2ED84}</Project>
+      <Name>Interface</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
