--- a/Share Data WPF/Share Data WPF.csproj
+++ b/Share Data WPF/Share Data WPF.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Share_Data_WPF</RootNamespace>
     <AssemblyName>Share Data WPF</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -104,6 +104,10 @@
     <ProjectReference Include="..\InterfaceV2\Interface.csproj">
       <Project>{8f95ec8f-1b4a-4a26-84c1-3b7defe2ed84}</Project>
       <Name>Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NetworkInterface\MyNetworkInterface.csproj">
+      <Project>{f9591ba2-3baa-4547-8a0e-0028ce3d486a}</Project>
+      <Name>MyNetworkInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\WpfApp1\IPmanip.csproj">
       <Project>{a6269a54-19b7-4569-83b5-cf8780889c09}</Project>
